5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1671_1879.log
== TEST (2019-04-29 03:06:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( s ,"extras e" , f "de falta" )

if(s > 400):
	g = (500) - (f * 0.25)
	print("R$" , g )
else:
	(s < 400) and s(s > 0)
	g = (100) - (f * 0.25)
	print("R$" , g )

-- ERROR:
File "XXXX", line 6
    print( s ,"extras e" , f "de falta" )
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 03:07:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( s ,"extras e" , f "de falta", )

if(s > 400):
	g = (500) - (f * 0.25)
	print("R$" , g )
else:
	(s < 400) and s(s > 0)
	g = (100) - (f * 0.25)
	print("R$" , g )

-- ERROR:
File "XXXX", line 6
    print( s ,"extras e" , f "de falta", )
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 03:07:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( s ,"extras e" , f "de falta", )

if(s > 400):
	g = (500) - (f * 0.25)
	print("R$" , g )
else:
	(s < 400) and s(s > 0)
	g = (100) - (f * 0.25)
	print("R$" , g )

-- EXECUTION TIME:
0.224934
-- ERROR:
  File "/home/codebench/codes/1671/1879/main.py", line 6
    print( s ,"extras e" , f "de falta", )
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 03:08:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( s ,"extras e" , f "de falta" )

if(s > 400):
	g = (500) - (f * 0.25)
	print("R$" , g )
else:
	(s < 400) and s(s > 0)
	g = (100) - (f * 0.25)
	print("R$" , g )

-- ERROR:
File "XXXX", line 6
    print( s ,"extras e" , f "de falta" )
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 03:08:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( s ,"extras e" , f , "de falta" )

if(s > 400):
	g = (500) - (f * 0.25)
	print("R$" , g )
else:
	(s < 400) and s(s > 0)
	g = (100) - (f * 0.25)
	print("R$" , g )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 495.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 03:08:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( s ,"extras e" , f , "de falta" )

if(s > 400):
	g = (500) - (f * 0.25)
	print("R$" , g )
else:
	g = (100) - (f * 0.25)
	print("R$" , g )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 495.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:41:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

h = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( h ,"extras e" , f , "de falta" )

if(h =< 400):
	g = 100 - (f * 0.25)
	print("R$" , g )
else:
	g = (100) - (f * 0.25)
	print("R$" , g )

-- ERROR:
File "XXXX", line 8
    if(h =< 400):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:50:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

h = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( h ,"extras e" , f , "de falta" )

if(h =< 400):
	g = 100 - (f * 0.25)
	print("R$" , g )
else:
	g = (100) - (f * 0.25)
	print("R$" , g )

-- ERROR:
File "XXXX", line 8
    if(h =< 400):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:58:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

h = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( h ,"extras e" , f , "de falta" )

if(h > 400):
	g = 100 - (f * 0.25)
	gt = round(g, 2)
	print("R$" , gt )
else:
	g = (100) - (f * 0.25)
	gt = round(g, 2)
	print("R$" , gt )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:59:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

h = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( h ,"extras e" , f , "de falta" )

if(h > 400):
	g = 100 - (f * 0.25)
	gt = round(g, 2)
	print("R$" , gt )
else:
	g = (100) - (f * 0.25)
	gt = round(g, 2)
	print("R$" , gt )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:00:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

h = float(input("Coloque o numero de horas extras que o funcionario conseguiu? "))
f = float(input("Coloque o numero de horas que o funcionario faltou? "))

print( h ,"extras e" , f , "de falta" )

if(h > 400):
	g = 500 - (f * 0.25)
	gt = round(g, 2)
	print("R$" , gt )
else:
	g = (100) - (f * 0.25)
	gt = round(g, 2)
	print("R$" , gt )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 495.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:12:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario trabalhou: "))
f = float(input("Coloque o numero de horas que o funcionario nao trabalhou: "))

print( s ,"extras e" , f , "de falta" )

h = (s) - (0.25 * f)

if ( h > 400 ):
	h1 = round(h, 2)
	print( "R$", h1 )
else:
	h2 = round(h, 2)
	print( "R$", h2 )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:12:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario trabalhou: "))
f = float(input("Coloque o numero de horas que o funcionario nao trabalhou: "))

print( s ,"extras e" , f , "de falta" )

h = (s) - (0.25 * f)

if ( h > 400 ):
	h1 = round(h, 2)
	print( "R$", h1 )
else:
	h2 = round(h, 2)
	print( "R$", h2 )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:17:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario trabalhou: "))
f = float(input("Coloque o numero de horas que o funcionario nao trabalhou: "))

print( s ,"extras e" , f , "de falta" )

h = (s) - (0.25 * f)
r = round(h, 2)

if ( r > 400 ):
	print( "R$", 500 )
else:
	print( "R$", 100 )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:18:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario trabalhou: "))
f = float(input("Coloque o numero de horas que o funcionario nao trabalhou: "))

print( s ,"extras e" , f , "de falta" )

h = (s) - (0.25 * f)
r = round(h, 2)

if ( r > 400 ):
	print( "R$", 500 )
else:
	print( "R$", 100 )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:19:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario trabalhou: "))
f = float(input("Coloque o numero de horas que o funcionario nao trabalhou: "))

print( s ,"extras e" , f , "de falta" )

h = (s) - (0.25 * f)
r = round(h, 2)

if ( r > 400 ):
	print( "R$", 500 )
else:
	print( "R$", 100 )

-- EXECUTION TIME:
0.296531
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:19:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario trabalhou: "))
f = float(input("Coloque o numero de horas que o funcionario nao trabalhou: "))

print( s ,"extras e" , f , "de falta" )

h = (s) - (0.25 * f)
r = round(h, 2)

if ( r > 400 ):
	print( "R$", 500 )
else:
	print( "R$", 100 )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:21:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario trabalhou: "))
f = float(input("Coloque o numero de horas que o funcionario nao trabalhou: "))

print( s ,"extras e" , f , "de falta" )

h = (s) - (0.25 * f)

if ( h > 400 ):
	print( "R$", 500.0 )
else:
	print( "R$", 100.0 )

-- EXECUTION TIME:
0.146007
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:26:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

s = float(input("Coloque o numero de horas extras que o funcionario trabalhou: "))
f = float(input("Coloque o numero de horas que o funcionario nao trabalhou: "))

print( s ,"extras e" , f , "de falta" )

h = (s) - (0.25 * f)

if ( h > 400 ):
	print( "R$", 500.0 )
else:
	print( "R$", 100.0 )

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
